# StreamPump

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
app/: package.json  tailwind.config.js
app/src/hooks/: useBondingCurve.ts  useCreatorUpgradePayload.ts  useProgram.ts  useProposalOracleReport.ts
app/src/pages/: _app.tsx  index.tsx
app/src/styles/: globals.css
app/src/utils/: proposalPda.ts  solana.ts
backend/: index.ts  package-lock.json  package.json  tsconfig.json
backend/config/: default.ts
backend/prisma/: schema.prisma
backend/src/models/: campaign.ts  (+5 more)
programs/streampump-core/: Cargo.toml
programs/streampump-core/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/streampump-core/src/instructions/: accept_buyout_offer.rs  anchor_content_hash.rs  burn_spump_for_inventory.rs  buy_s1_token.rs  cancel_buyout_offer.rs  cancel_proposal.rs  claim_endorsement.rs  claim_market_reward.rs  claim_s1_buyout_usdc.rs  create_campaign.rs  create_proposal.rs  emergency_void.rs  endorse_proposal.rs  execute_s1_graduation.rs  init_s1_buyout.rs  initialize_protocol.rs  mod.rs  place_bet.rs  rage_quit_s1.rs  register_creator.rs  sell_s1_token.rs  settle_campaign.rs  settle_proposal.rs  settle_track1_base.rs  settle_track2.rs  settle_track3_cps.rs  sponsor_deposit.rs  sponsor_fund.rs  submit_buyout_offer.rs  submit_oracle_report.rs  upgrade_creator.rs
programs/streampump-core/src/instructions/archive/: README.md  submit_oracle_report.rs
programs/tests/: s1-buyout.spec.ts  s2-traffic-market.spec.ts  streampump-core.ts
src/: lib.rs
(+35 files in other folders)
